# polok

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  export_data.py  import_data.py  pyproject.toml  start.py
alembic/: env.py
alembic/versions/: 001_initial_tables.py
app/: auth.py  config.py  database.py  main.py  models.py
app/routers/: parties.py  programs.py
app/static/: gemeenten.json
app/templates/: base.html  data.html  login.html  map.html  parties.html  programs.html
data/: municipalities.csv  national_parties.csv  parties.csv  party_websites.csv  programs_meta.csv
