[project]
name = "polok-web"
version = "1.0.0"
description = "Verkiezingsprogramma's van Nederlandse gemeenteraadsverkiezingen 2026"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn[standard]>=0.41.0",
    "alembic>=1.18.4",
    "psycopg[binary]>=3.3.3",
]
